[package]
name = "nongli"
version = "0.2.0"
edition = "2021"
authors = ["SUPERTSY5 <0x7f178375@gmail.com>"]
description = "A Rust library and CLI tool for Chinese calendar"
license = "MIT"
documentation = "https://docs.rs/nongli"
repository = "https://github.io/supertsy5/nongli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "^1.0.4"
chrono = { version = "^0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["cargo", "unstable-doc"] }
serde = { version = "^1.0.188", features = ["derive"] }
